[package]
name = "client"
version = "0.1.0"
authors = ["lucas.jenss"]
edition = "2018"
description = "Lorem Ipsum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
name = "NextSlidePlease"
identifier = "com.next-slide-please.client"
icon = []
version = "0.0.1"
resources = []
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Developer Tool"
short_description = "An example application."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
deb_depends = []
osx_frameworks = []

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
tungstenite = "0.11.1"
url = "2.2.0"
log = "0.4.0"
env_logger = "0.8.2"
webbrowser = "0.5.5"
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
keybd_event = "0.1.2"
anyhow = "1.0"
dotenv = "0.15.0"

[target.'cfg(macos)'.dependencies]
macos-accessibility-client = "0.0"
#iced = { version = "0.2",  features = ["tokio"] }
#iced_futures = "0.2"
#iced_native = "0.2"
#instant = "0.1.9"
