[package]
name = "client"
version = "1.0.0-alpha.1"
authors = ["lucas.jenss"]
edition = "2018"
description = "Lorem Ipsum"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
name = "NextSlidePlease"
identifier = "com.next-slide-please.client"
icon = []
version = "0.0.1"
resources = []
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Developer Tool"
short_description = "An example application."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
deb_depends = []
osx_frameworks = []

[dependencies]
druid = "0.7"
tungstenite = "0.11.1"
url = "2.2.0"
log = "0.4.0"
env_logger = "0.8.2"
webbrowser = "0.5.5"
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
keybd_event = "0.1.2"
anyhow = "1.0"
dotenv = "0.15.0"

[build-dependencies]
vergen = "3"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0"
macos-app-nap = "0.0"


