[package]
name = "client"
version = "1.0.0-alpha.1"
authors = ["lucas.jenss"]
edition = "2018"
description = "NextSlidePlease.com GUI client"
build = "build.rs"

[package.metadata.bundle]
name = "NextSlidePlease"
identifier = "com.next-slide-please.client"
icon = []
version = "1.0.0-alpha.1"
resources = []
copyright = "Copyright (c) Jane Doe 2021. Licensed under GPLv3. See LICENSE.md"
category = ""
short_description = "NextSlidePlease.com GUI client"
long_description = """"""
deb_depends = []
osx_frameworks = []

[dependencies]
druid = "0.7"
tungstenite = "0.11.1"
url = "2.2.0"
log = "0.4.0"
env_logger = "0.8.2"
webbrowser = "0.5.5"
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
keybd_event = "0.1.2"
anyhow = "1.0"
dotenv = "0.15.0"

[build-dependencies]
vergen = "3"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0"
macos-app-nap = "0.0"
